--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
     "dayjs": "^1.11.10",
+    "fastclick": "^1.0.6",
     "tki-qrcode": "^0.1.6",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9",
@@ -64,6 +65,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3081220230817001",
     "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
+    "@types/fastclick": "^1.0.33",
     "@uni-helper/vite-plugin-uni-components": "^0.0.8",
     "@vue/runtime-core": "^3.2.45",
     "@vue/tsconfig": "^0.1.3",
