--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-3090620231104002",
     "dayjs": "^1.11.10",
     "fastclick": "^1.0.6",
+    "prettier": "^3.1.0",
     "relationship.js": "^1.2.4",
     "tki-qrcode": "^0.1.6",
     "vue": "^3.3.8",
