--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@uni-helper/vite-plugin-uni-components": "^0.0.8",
     "@vue/runtime-core": "^3.3.8",
     "@vue/tsconfig": "^0.1.3",
+    "request": "^2.88.2",
     "sass": "^1.69.5",
     "typescript": "^4.9.4",
     "vite": "4.0.3",
